src/objects/Partner_Fee__c.object
<CustomObject>
    <description>LPAM - The monitory information for an Owner</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <label>Inflation Rate</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Fee__c</fullName>
        <label>Partner Fee</label>
        <referenceTo>Partner_Structure__c</referenceTo>
        <relationshipLabel>Partner Fees</relationshipLabel>
        <relationshipName>Partner_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accrued</fullName>
                </value>
                <value>
                    <fullName>Non-Cumulative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Fee</label>
    <nameField>
        <displayFormat>PFEE-{00000}</displayFormat>
        <label>Partner Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>